<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">


       <ImageView
           android:id="@+id/iv_landscape"
           android:layout_width="match_parent"
           android:layout_height="300dp"
           android:layout_alignParentTop="true"
           android:layout_centerVertical="true"
           android:layout_marginTop="0dp"
           android:src="@drawable/ic_baseline_landscape_24" />

       <EditText
           android:id="@+id/email"
           android:layout_width="match_parent"
           android:layout_height="45dp"
           android:hint="@string/hint_email"
           android:inputType="text"
           android:maxLength="25"
           android:maxLines="1"
           android:padding="8dp"
           android:textColor="@color/colorPrimaryDark"
           android:textSize="14sp"
           android:layout_below="@id/iv_landscape"/>

       <EditText
           android:id="@+id/password"
           android:layout_width="match_parent"
           android:layout_height="45dp"
           android:hint="@string/hint_password"
           android:inputType="textPassword"
           android:maxLength="25"
           android:maxLines="1"
           android:padding="8dp"
           android:textColor="@color/colorPrimaryDark"
           android:textSize="14sp"/>

       <Button
           android:id="@+id/login"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/colorAccent"
           android:paddingTop="8dp"
           android:paddingBottom="8dp"
           android:text="@string/button_login"
           android:textColor="@color/colorPrimary"
           android:textSize="16sp"/>

       <Button
           android:id="@+id/signup"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/colorAccent"
           android:paddingTop="8dp"
           android:paddingBottom="8dp"
           android:text="@string/button_signup"
           android:textColor="@color/colorPrimary"
           android:textSize="16sp"/>

   </LinearLayout>


</RelativeLayout>